[package]
name = "veristr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0"}
env_logger = "0.10.0"
mongodb = { version = "2.6.1", features = ["tokio-runtime"] }
openssl = "0.10.57"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
